# Alien-World-OpenGL

./: CMakeLists.txt  alien-world.cpp  alien.cpp  alien.h  spaceship.cpp  spaceship.h  textures-service.cpp  textures-service.h
skybox-photos/: TCom_Gore_1K_normal.tga  TCom_Sand_Muddy2_2x2_1K_albedo.tga
